add_library(
    _pcg_fortran_lib
    STATIC
    ${CMAKE_CURRENT_SOURCE_DIR}/pcg_fortran.f90
    ${CMAKE_CURRENT_SOURCE_DIR}/pcg_default_increment_implementation.f90
    ${CMAKE_CURRENT_SOURCE_DIR}/pcg_default_multiplier_implementation.f90
    ${CMAKE_CURRENT_SOURCE_DIR}/pcg_initialize_implementation.f90
    ${CMAKE_CURRENT_SOURCE_DIR}/pcg_output_rxs_m_implementation.f90
    ${CMAKE_CURRENT_SOURCE_DIR}/pcg_output_rxs_m_xs_implementation.f90
    ${CMAKE_CURRENT_SOURCE_DIR}/pcg_output_xsh_rr_implementation.f90
    ${CMAKE_CURRENT_SOURCE_DIR}/pcg_output_xsh_rs_implementation.f90
    ${CMAKE_CURRENT_SOURCE_DIR}/pcg_output_xsl_rr_implementation.f90
    ${CMAKE_CURRENT_SOURCE_DIR}/pcg_output_xsl_rr_rr_implementation.f90
    ${CMAKE_CURRENT_SOURCE_DIR}/pcg_rotr_implementation.f90
)
